--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -11,8 +11,16 @@ Updated: 2023-05-11 15:38:02
 
 */
 
+/* GENERAL */
+* {
+    font-family: 'Syne', sans-serif;
+}
+
+
+/* HEADER */
 header {
     padding: 31px;
+    padding-right: 0px;
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -20,22 +28,37 @@ header {
 
 nav ul {
     display: flex;
+    align-items: center;
 }
 
 nav ul li a {
     text-decoration: none;
-    padding:20px;
+    padding:40px;
     font-size: 16px;
-    color: red;
-    background-color: black;
+    color: black;
+    
 }
 
 .commander a {
+    margin-right: 0px;
+    height: 80;
+    width: 236;
     color: white;
     background: #DC9F96 ;
 }
 
-.logo {
+/* FOOTER */
 
-
-}
+footer {
+    height: 60px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .footer-content a {
+    text-decoration: none;
+    color:black;
+  }
+  
