--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -187,3 +187,64 @@ footer {
     margin-bottom: 20px;
     
 }
+
+/* boutons commander */
+
+.form-counter {
+    display: flex;
+    margin-left: 150px;
+    gap: 50px;    
+}
+
+.selection {
+    width: 70px;
+    position: relative;
+}
+
+.form-counter input {
+    padding: 15px;
+    width: 60px;
+    border: 0;
+    border-radius: 10px;
+}
+.boutons {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: #DC9F96;
+    height: 100%;
+    border-radius: 0 10px 10px 0;
+    margin-left: 50px;
+
+}
+.boutons a {
+    padding: 0px 10px;
+    height: 50%;
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.moins {
+    border-radius: 0 10px 0 0;
+    
+    
+}
+.plus {
+    border-radius: 0 0 10px 0;
+    border-bottom: 1px solid white;
+    
+    
+}
+.ok {
+    color: white;
+    background: #E0B9B4;
+    border: 0;
+    border-radius: 5px;
+    margin-left: -45px;
+    width: 92px;
+}
