form column input text area 0

--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -302,5 +302,8 @@ footer {
         border-right: 0;
         
     }
+
+    .form-column input, .form-column textarea  {
+        padding: 20px 0px;
   }
   
