--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -298,5 +298,12 @@ footer {
         border-right: 0;
     }
     
+    .form-column input, .form-column textarea  {
+        width:100%;
+    }
+
+    .elementor-77{
+        background-color: #3B8E46;
+    }
   }
   
